# newsfinder

./: .gitignore  README.md  config.yaml  newsctl  progress.md  prompts.yaml  pyproject.toml  requirements.txt  spec.md
.kiro/agents/: analyzer.json
benchmarks/: check_models.py  dataset.json  model_audition_report.html  results.json  results_gemini.json  runner.py
data/: article_history.jsonl  sitemap_directory.json
scripts/: backfill_sitemaps.py  explore_sitemap.py  import_history.py  run_pipeline.py  run_profiler.py  sync_hf_archive.py  test_prompt_improvement.py  test_tuning.py  ui_service.py  verify_missing.py  warm_sitemap_cache.py
src/: archive_manager.py  context_profiler.py  event_logger.py  feedback.py  history.py  main.py  models.py  ollama_monitor.py  pipeline.py  settings.py  utils.py
src/aggregator/: rss_scraper.py  sitemap.py
src/analysis/: acp_client.py  llm_client.py  openrouter_client.py  optimizer.py  verification_service.py
src/database/: chroma_client.py
src/services/: scraper.py  tagging.py
src/web/: __init__.py  __main__.py  app.py  logging_service.py  utils.py
src/web/routes/: api.py  articles.py  config.py  dashboard.py  explore.py  import_routes.py  verification.py
src/web/templates/: articles.html  base.html  config.html  dashboard.html  discovery.html  explore.html  import.html  sources.html  tag_editor.html  verification.html
tests/: test_archive_manager.py  test_models.py  test_pipeline.py  test_render.py  test_rss_scraper.py  test_utils.py  test_web_routes.py
