[project]
name = "newsfinder"
version = "1.0.0"
description = "Competitive intelligence dashboard — aggregates, filters, and analyzes news articles"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "flask>=3.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "lxml>=5.0",
]

[project.scripts]
newsfinder = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]
